# meeting-hub

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: post-tool-use.py  pre-tool-use.py  stop.py
.github/workflows/: sync-to-hf-spaces.yml
.streamlit/: config.toml
cassettes/: internal_meeting.yaml  interview.yaml  one_on_one.yaml  sales_meeting.yaml  seminar.yaml
cli/: main.py
core/: __init__.py  cassette.py  cassette_schema.py  context.py  destinations.py  evaluation.py  history.py  hooks.py  llm_client.py  metrics.py  pipeline.py  runtime.py
core/adapters/: __init__.py  base.py  file.py  live_audio.py  zoom_sdk.py
core/steps/: base.py  (+8 more)
docs/: DIARIZATION_SHORT_UTTERANCE.md  FLOW.md  FREE_HOSTING_OPTIONS.md  HF_SPACES_DEPLOYMENT.md  NOTION_DB_SCHEMA.md  PHASE0_DESIGN.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  ROADMAP.md  SETUP_LIVE_AUDIO_MACOS.md  SETUP_LIVE_AUDIO_WINDOWS.md  SETUP_MODAL.md  SETUP_STREAMLIT.md  SETUP_ZOOM_SDK.md  USER_GUIDE.md
golden_samples/: README.md
prompts/: cleanup_default.md  cleanup_seminar.md  minutes_extract_internal_meeting.md  minutes_extract_interview.md  minutes_extract_one_on_one.md  minutes_extract_sales_meeting.md  minutes_extract_seminar.md
scripts/: modal_deploy.py
templates/: internal_meeting.md.j2  interview.md.j2  one_on_one.md.j2  sales_meeting.md.j2  seminar.md.j2
tests/: conftest.py
web/: __init__.py  auth.py  run_service.py  streamlit_app.py
(+57 files in other folders)
